added review for products
