# swagger/v1/swagger.yaml
@@ -864,6 +864,37 @@ paths:
       responses:
         '200':
           description: label removed successfully
+  "/api/v1/products/{product_id}/reviews":
+    parameters:
+    - name: product_id
+      in: path
+      description: product_id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: product list reviews
+      tags:
+      - Reviews
+      responses:
+        '200':
+          description: successful
+    post:
+      summary: product create review
+      tags:
+      - Reviews
+      security:
+      - Bearer: []
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              oneOf:
+              - "$ref": "#/components/schemas/review"
   "/api/v1/search":
     get:
       summary: search products with a title and a description
@@ -1227,6 +1258,16 @@ components:
           type: integer
       required:
       - product_id
+    review:
+      type: object
+      properties:
+        text:
+          type: string
+        rating:
+          type: integer
+      required:
+      - text
+      - rating
   securitySchemes:
     Bearer:
       type: http
